--- a/styles/all/template/sitemap.html
+++ b/styles/all/template/sitemap.html
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?xml-stylesheet type="text/xsl" href="{U_XSL_FILE}" ?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 <!-- BEGIN urlset -->
 	<url>
